Harmonize Stream.collect() usage
use Stream.toList() or collect(Collectors.toSet()) where possible.

See gh-36509